<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.signeus.pokerstats.controller.ResultActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/CPR"
                    android:id="@+id/txvCPR"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtCPR"
                    android:paddingTop="50dp"
                    android:gravity="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/CSI"
                    android:id="@+id/txvCSI"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtCSI"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/PN"
                    android:id="@+id/txvPN"
                    android:gravity="center"
                    android:paddingTop="50dp"
                    android:textColor="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:id="@+id/edtPN"
                    android:paddingTop="50dp"
                    android:gravity="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" >

                <TableLayout
                    android:id="@+id/tblPowerNumbers"
                    android:gravity="center"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:stretchColumns="*"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"></TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
